test/files/errors/notStr.jg
_main int () 
{
    uuuu string = "oui";
    (!uuuu) if
        uuuu print;
    0 return;
}